Added Task1_Calculation class

--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task1_Calculation.cs" />
+    <Compile Include="Task2_Converter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
