--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -43,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InputValueCheck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1_Calculation.cs" />
     <Compile Include="Task2_Converter.cs" />
+    <Compile Include="Task3_LoanRepayment.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
