--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Task2_Converter.cs" />
     <Compile Include="Task3_LoanRepayment.cs" />
     <Compile Include="Task4_ATMMachines.cs" />
+    <Compile Include="Task5_TriangleOddNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
