--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Task3_LoanRepayment.cs" />
     <Compile Include="Task4_ATMMachines.cs" />
     <Compile Include="Task5_TriangleOddNumbers.cs" />
+    <Compile Include="Task6_LongestString.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
