Added Task2, Task4

--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1\Train.cs" />
     <Compile Include="Task1\TrainScheduler.cs" />
+    <Compile Include="Task4\Pupil.cs" />
+    <Compile Include="Task4\PupilList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
