--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -52,6 +52,11 @@
     <Compile Include="Task1\TrainScheduler.cs" />
     <Compile Include="Task4\Pupil.cs" />
     <Compile Include="Task4\PupilList.cs" />
+    <Compile Include="Task5\Bicycle.cs" />
+    <Compile Include="Task5\Car.cs" />
+    <Compile Include="Task5\Execute.cs" />
+    <Compile Include="Task5\Moto.cs" />
+    <Compile Include="Task5\Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
