Minor fixes Task4 and Task5 Added Task5 home task - DisplayCharacteristics method

--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Task4\PupilList.cs" />
     <Compile Include="Task5\Bicycle.cs" />
     <Compile Include="Task5\Car.cs" />
-    <Compile Include="Task5\Execute.cs" />
+    <Compile Include="Task5\VehicleList.cs" />
     <Compile Include="Task5\Moto.cs" />
     <Compile Include="Task5\Vehicle.cs" />
   </ItemGroup>
