--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1\Train.cs" />
     <Compile Include="Task1\TrainScheduler.cs" />
+    <Compile Include="Task3\PrintColor.cs" />
     <Compile Include="Task4\Pupil.cs" />
     <Compile Include="Task4\PupilList.cs" />
     <Compile Include="Task5\Bicycle.cs" />
