--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -49,9 +49,15 @@
     <Compile Include="Task2\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Task1\Execute.cs" />
+    <Compile Include="Task1\SalaryAndAge.cs" />
     <Compile Include="Task1\Worker.cs" />
     <Compile Include="Task2\Worker.cs" />
+    <Compile Include="Task3\Aquatic.cs" />
+    <Compile Include="Task3\Arboreal.cs" />
+    <Compile Include="Task3\Feeder.cs" />
+    <Compile Include="Task3\Mammal.cs" />
+    <Compile Include="Task3\Subterranean.cs" />
+    <Compile Include="Task3\Terrestrial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
