--- a/practice_05.25.19_interface/practice_05.25.19_interface.csproj
+++ b/practice_05.25.19_interface/practice_05.25.19_interface.csproj
@@ -48,6 +48,12 @@
     <Compile Include="Task1_ISwitchable\ISwitchable.cs" />
     <Compile Include="Task1_ISwitchable\SwitchStatus.cs" />
     <Compile Include="Task1_ISwitchable\Device.cs" />
+    <Compile Include="Task2_BankAccount\BankAccount.cs" />
+    <Compile Include="Task2_BankAccount\CardAccount.cs" />
+    <Compile Include="Task2_BankAccount\CurrentAccount.cs" />
+    <Compile Include="Task2_BankAccount\DepositAccount.cs" />
+    <Compile Include="Task2_BankAccount\IChargeableInterest.cs" />
+    <Compile Include="Task2_BankAccount\IFoundFreeAccess.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
