--- a/practice_06.08.2019_System.IO/practice_06.08.2019_System.IO.csproj
+++ b/practice_06.08.2019_System.IO/practice_06.08.2019_System.IO.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1_Folders\Folder.cs" />
     <Compile Include="Task2_FileCreation\FileCreation.cs" />
+    <Compile Include="Task3_FileCharacters\FileCharacters.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
