--- a/practice_06.15.2019_generics/practice_06.15.2019_generics.csproj
+++ b/practice_06.15.2019_generics/practice_06.15.2019_generics.csproj
@@ -45,12 +45,14 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task1_MyList\Execute.cs" />
+    <Compile Include="Task1_MyList\Interfaces\IMyList.cs" />
+    <Compile Include="Task1_MyList\MyList.cs" />
+    <Compile Include="Task2_CarCollection\CarCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Task1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
