--- a/practice_06.15.2019_generics/practice_06.15.2019_generics.csproj
+++ b/practice_06.15.2019_generics/practice_06.15.2019_generics.csproj
@@ -43,11 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ICar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1_MyList\Execute.cs" />
-    <Compile Include="Task1_MyList\Interfaces\IMyList.cs" />
+    <Compile Include="Interfaces\IMyList.cs" />
     <Compile Include="Task1_MyList\MyList.cs" />
+    <Compile Include="Task2_CarCollection\Car.cs" />
     <Compile Include="Task2_CarCollection\CarCollection.cs" />
   </ItemGroup>
   <ItemGroup>
