Task2_CarCollection and Task3_LinkedList were added

--- a/practice_06.15.2019_generics/practice_06.15.2019_generics.csproj
+++ b/practice_06.15.2019_generics/practice_06.15.2019_generics.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Task1_MyList\MyList.cs" />
     <Compile Include="Task2_CarCollection\Car.cs" />
     <Compile Include="Task2_CarCollection\CarCollection.cs" />
+    <Compile Include="Task2_CarCollection\CarList.cs" />
+    <Compile Include="Task3_LinkedList\LinkedList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
