--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1_StudentList\Student.cs" />
     <Compile Include="Task1_StudentList\StudentList.cs" />
+    <Compile Include="Task2_StudentDictionary\StudentDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
