--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1_StudentList\Student.cs" />
-    <Compile Include="Task1_StudentList\StudentList.cs" />
+    <Compile Include="Task1_StudentList\StudentManager.cs" />
     <Compile Include="Task2_StudentDictionary\StudentDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
