--- a/practice_06.28.2019_delegates/practice_06.28.2019_delegates.csproj
+++ b/practice_06.28.2019_delegates/practice_06.28.2019_delegates.csproj
@@ -46,6 +46,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task1_Calculator\Calculator.cs" />
+    <Compile Include="Task2_DeferedInitialization\DeferedInitialization.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeList.cs" />
+    <Compile Include="Gender.cs" />
+    <Compile Include="Task2_DeferedInitialization\UndeferedInitialization.cs" />
+    <Compile Include="Task3_Company\Executer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
