--- a/practice_06.28.2019_delegates/practice_06.28.2019_delegates.csproj
+++ b/practice_06.28.2019_delegates/practice_06.28.2019_delegates.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pupil.cs" />
     <Compile Include="Task1_Calculator\Calculator.cs" />
     <Compile Include="Task2_DeferedInitialization\DeferedInitialization.cs" />
     <Compile Include="Employee.cs" />
