--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Collections.cs" />
     <Compile Include="DateTimeClass.cs" />
     <Compile Include="Delegates.cs" />
+    <Compile Include="Events.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
