Task4_JoinEmployees was added

--- a/practice_06.28.2019_delegates/practice_06.28.2019_delegates.csproj
+++ b/practice_06.28.2019_delegates/practice_06.28.2019_delegates.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Gender.cs" />
     <Compile Include="Task2_DeferedInitialization\UndeferedInitialization.cs" />
     <Compile Include="Task3_Company\Executer.cs" />
+    <Compile Include="Task4_JoinEmployees\EmployeeListJoiner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
