--- a/CSharp_Course_Project/CSharp_Course_Project.csproj
+++ b/CSharp_Course_Project/CSharp_Course_Project.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DateTimeClass.cs" />
     <Compile Include="Delegates.cs" />
     <Compile Include="Events.cs" />
+    <Compile Include="Multithreading.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
