--- a/self_test_07.20.2019/self_test_07.20.2019.csproj
+++ b/self_test_07.20.2019/self_test_07.20.2019.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangedTask\NewFridge.cs" />
+    <Compile Include="ChangedTask\NewUser.cs" />
     <Compile Include="Enum\DoorStatus.cs" />
     <Compile Include="Enum\SwitchStatus.cs" />
     <Compile Include="Fridge.cs" />
