--- a/practice_07.20.2019_multithreading/practice_07.20.2019_multithreading.csproj
+++ b/practice_07.20.2019_multithreading/practice_07.20.2019_multithreading.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sign.cs" />
+    <Compile Include="SignsShower.cs" />
     <Compile Include="Task1_FallingSymbols\FallingSymbols.cs" />
   </ItemGroup>
   <ItemGroup>
