--- a/practice_07.20.2019_multithreading/practice_07.20.2019_multithreading.csproj
+++ b/practice_07.20.2019_multithreading/practice_07.20.2019_multithreading.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Matrix2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sign.cs" />
