--- a/SimpleRacing/SimpleRacing.csproj
+++ b/SimpleRacing/SimpleRacing.csproj
@@ -43,13 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board.cs" />
     <Compile Include="Border.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="GameLogic.cs" />
     <Compile Include="OtherCar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleRacing\MyCar.cs" />
+    <Compile Include="MyCar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
