--- a/SimpleRacing/SimpleRacing.csproj
+++ b/SimpleRacing/SimpleRacing.csproj
@@ -45,9 +45,11 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="Border.cs" />
+    <Compile Include="CrashStatusEventArgs.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="GameLogic.cs" />
     <Compile Include="OtherCar.cs" />
+    <Compile Include="OtherCar2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyCar.cs" />
